@@ -1,5 +1,11 @@
 2009-05-27  Esteban Sanchez  <estebans@artica.es>
 
+	* include/functions_visual_map.php: Problem fixed on
+	get_layout_status() with label elements. Fixed definitely
+	#2787197.
+
+2009-05-27  Esteban Sanchez  <estebans@artica.es>
+
 	* include/functions_db.php: return_status_agent() renamed to
 	get_agent_status(). Improved get_agentmodule_status() documentation
 	and code.
